--- a/style3.css
+++ b/style3.css
@@ -104,6 +104,42 @@ box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
 float: left;
 width: 50px;
 }
+caption{
+  font-size:24px;
+  font-weight:bold;
+  text-align:left;
+  color:#333;
+  margin-botton:16px;
+}
+thead{
+  background-color:#333;
+  color:white;
+}
+body{
+  font-family:sans-self;
+}
+th,td{
+  border:1px soid black;
+  padding:8px;
+}
 table{
-  color:white
+  border-collapse:collapse;
+  border:5px soild rgb(10,8,114);
+  text-align:center;
+  vertical-align:middle;
+}
+thead th{
+  width:25%;
+}
+.cell-highlight{
+  background-color:gold;
+  font-weight:bold;
+}
+tbody tr:nth-child(even)}{
+  background-color:#eee;
+}
+tbody th{
+  background-color:#36c;
+  color:#fff;
+  text-align:left;
 }
