--- a/style3.css
+++ b/style3.css
@@ -40,7 +40,7 @@ h2 {
 border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 color: rgba(255, 255, 255, 0.5);
 font-weight: 100;
-font-size: 22px;
+font-size: 30px;
 line-height: 24px;
 padding-bottom: 30px;
 text-align: center;
@@ -50,7 +50,7 @@ h4 {
 border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 color: rgba(255, 255, 255, 0.5);
 font-weight: 100;
-font-size: 22px;
+font-size: 30px;
 line-height: 24px;
 padding-bottom: 30px;
 text-align: center;
@@ -105,10 +105,10 @@ float: left;
 width: 50px;
 }
 caption{
-  font-size:24px;
-  font-weight:bold;
+  font-size:30px;
+  font-weight:bolder;
   text-align:left;
-  color:#333;
+  color:white;
   margin-botton:16px;
   line-height:150px;
 }
@@ -143,4 +143,24 @@ tbody th{
   background-color:#36c;
   color:#fff;
   text-align:left;
+}
+h4 {
+border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+color: rgba(255, 255, 255, 0.5);
+font-weight: 100;
+font-size: 22px;
+line-height: 24px;
+padding-bottom: 30px;
+text-align: center;
+width: 70%;
+}
+h2 {
+border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+color: rgba(255, 255, 255, 0.5);
+font-weight: 100;
+font-size: 22px;
+line-height: 24px;
+padding-bottom: 30px;
+text-align: center;
+width: 70%;
 }
