--- a/style3.css
+++ b/style3.css
@@ -1,166 +1,212 @@
 ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
-background-color: #333;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
 li {
-float: left;
-border-right: 1px solid #bbb;
+    float: left;
+    border-right: 1px solid #bbb;
 }
 
 li a {
-display: block;
-color: white;
-text-align: center;
-padding: 24px 26px;
-text-decoration: none;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 24px 26px;
+    text-decoration: none;
 }
 
 li a:hover {
-background-color: #111;
+    background-color: #111;
 }
+
 body {
-background: linear-gradient(#9198e5, #e66465);
-margin: 0;
-padding: 0;
+    background: linear-gradient(#9198e5, #e66465);
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
-top:-500 px;
-text-align: center;
-color: #FFF;
-font-size: 4em;
-width: 100%;
+    top: -500 px;
+    text-align: center;
+    color: #FFF;
+    font-size: 4em;
+    width: 100%;
 }
 
 h2 {
-border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-color: rgba(255, 255, 255, 0.5);
-font-weight: 100;
-font-size: 30px;
-line-height: 24px;
-padding-bottom: 30px;
-text-align: center;
-width: 70%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 100;
+    font-size: 30px;
+    line-height: 24px;
+    padding-bottom: 30px;
+    text-align: center;
+    width: 70%;
 }
+
 h4 {
-border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-color: rgba(255, 255, 255, 0.5);
-font-weight: 100;
-font-size: 30px;
-line-height: 24px;
-padding-bottom: 30px;
-text-align: center;
-width: 70%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 100;
+    font-size: 30px;
+    line-height: 24px;
+    padding-bottom: 30px;
+    text-align: center;
+    width: 70%;
 }
+
 p {
-color: aliceblue;
-line-height: 1.3em;
-text-align: left;
-width: 100%;
+    color: aliceblue;
+    line-height: 1.3em;
+    text-align: center;
+    width: 100%;
 }
 
 .byline {
-font-family: Helvetica;
-color: rgba(255, 255, 255, 0.5);
-float: left;
-font-size: 14px;
-padding-left: 10px;
-text-transform: uppercase;
+    font-family: Helvetica;
+    color: rgba(255, 255, 255, 0.5);
+    float: left;
+    font-size: 14px;
+    padding-left: 10px;
+    text-transform: uppercase;
 }
 
 .caption {
-display: block;
-font-family: 'Playfair Display', serif;
-font-size: 34px;
-font-style: italic;
-line-height: 34px;
-margin-left: 20px;
-padding: 10px;
-position: relative;
-text-align: center;
-top: 50%;
-width: 90%;
+    display: block;
+    font-family: 'Playfair Display', serif;
+    font-size: 34px;
+    font-style: italic;
+    line-height: 34px;
+    margin-left: 20px;
+    padding: 10px;
+    position: relative;
+    text-align: center;
+    top: 50%;
+    width: 90%;
 }
 
 .content {
-padding: 40px;
+    padding: 40px;
 }
 
 .image {
-background-image: url("https://img1.baidu.com/it/u=3151209627,441000082&fm=26&fmt=auto");
-background-size: cover;
-background-position: left;
-height: 900px;
+    background-image: url("https://img1.baidu.com/it/u=3151209627,441000082&fm=26&fmt=auto");
+    background-size: cover;
+    background-position: center;
+    height: 900px;
 }
 
 .writer-img {
--webkit-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
--moz-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
-float: left;
-width: 50px;
+    -webkit-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
+    -moz-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
+    box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
+    float: left;
+    width: 50px;
 }
-caption{
-  font-size:30px;
-  font-weight:bolder;
-  text-align:left;
-  color:white;
-  margin-botton:16px;
-  line-height:150px;
+
+caption {
+    font-size: 30px;
+    font-weight: bolder;
+    text-align: left;
+    color: white;
+    margin-botton: 16px;
+    line-height: 150px;
 }
-thead{
-  background-color:#333;
-  color:white;
+
+thead {
+    background-color: #333;
+    color: white;
 }
-body{
-  font-family:sans-self;
+
+body {
+    font-family: sans-self;
 }
-th,td{
-  border:1px soid black;
-  padding:8px;
+
+th,
+td {
+    border: 1px soid black;
+    padding: 8px;
 }
-table{
-  border-collapse:collapse;
-  border:5px soild rgb(10,8,114);
-  text-align:center;
-  vertical-align:middle;
+
+table {
+    border-collapse: collapse;
+    border: 5px soild rgb(10, 8, 114);
+    text-align: center;
+    vertical-align: middle;
 }
-thead th{
-  width:25%;
+
+thead th {
+    width: 25%;
 }
-.cell-highlight{
-  background-color:gold;
-  font-weight:bold;
+
+.cell-highlight {
+    background-color: gold;
+    font-weight: bold;
 }
-tbody tr:nth-child(even)}{
-  background-color:#eee;
+
+tbody tr:nth-child(even) {
+    background-color: #eee;
 }
-tbody th{
-  background-color:#36c;
-  color:#fff;
-  text-align:left;
+
+tbody th {
+    background-color: #36c;
+    color: #fff;
+    text-align: left;
 }
+
 h4 {
-border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-color: rgba(255, 255, 255, 0.5);
-font-weight: 100;
-font-size: 22px;
-line-height: 24px;
-padding-bottom: 30px;
-text-align: center;
-width: 70%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 100;
+    font-size: 22px;
+    line-height: 24px;
+    padding-bottom: 30px;
+    text-align: center;
+    width: 70%;
 }
+
 h2 {
-border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-color: rgba(255, 255, 255, 0.5);
-font-weight: 100;
-font-size: 22px;
-line-height: 24px;
-padding-bottom: 30px;
-text-align: center;
-width: 70%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 100;
+    font-size: 22px;
+    line-height: 24px;
+    padding-bottom: 30px;
+    text-align: center;
+    width: 70%;
+}
+
+.footer-section {
+    padding: 2em 0;
+    text-align: center;
+    background: #d89c33
+}
+
+.footer-top p {
+    font-size: 0.9em;
+    color: #fff;
+    font-weight: 400;
+}
+
+.footer-top a {
+    font-size: 1em;
+    color: #fff;
+    font-weight: 400;
+    text-transform: capitalize;
+}
+
+.footer-top a:hover {
+    color: #fff;
+}
+
+.footer-top a {
+    margin: 0 0.3em
+}
+
+#pic{
+    text-align: center;
 }
