--- a/style2.css
+++ b/style2.css
@@ -104,3 +104,29 @@ box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
 float: left;
 width: 50px;
 }
+.footer-section {
+    padding: 2em 0;
+    text-align: center;
+    background: #d89c33
+}
+
+.footer-top p {
+    font-size: 0.9em;
+    color: #fff;
+    font-weight: 400;
+}
+
+.footer-top a {
+    font-size: 1em;
+    color: #fff;
+    font-weight: 400;
+    text-transform: capitalize;
+}
+
+.footer-top a:hover {
+    color: #fff;
+}
+
+.footer-top a {
+    margin: 0 0.3em
+}
